--- a/cnit-homework-2.html
+++ b/cnit-homework-2.html
@@ -19,7 +19,7 @@
           <a href="index.html">TaRon Jamal</a>
         </div>
 
-      <li><a href="cnit-index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="cnit-about.html">About</a></li>
       <li><a href="cnit-work.html">Work</a></li>
       <li><a href="cnit-homework-2.html">Homework 2</a></li>
