--- a/cnit-about.html
+++ b/cnit-about.html
@@ -45,7 +45,7 @@
 
     <!-- Footer -->
     <div id="footer">
-      <a href="mailto:tje.hotep@gmail.com"<i style="font-size:24px" class="fa">&#xf003;</i></a>
+      <a href="mailto:tje.hotep@gmail.com" style="font-size:24px" class="fa">&#xf003;</i></a>
         <script>
           var date = document.lastModified;
           document.write("Last Modified: "+date);
