--- a/cnit-about.html
+++ b/cnit-about.html
@@ -20,7 +20,7 @@
         </div>
 
       <li><a href="index.html">Home</a></li>
-      <li><a href="cnit-about.html">About</a></li>
+      <li><a class="selected" href="cnit-about.html">About</a></li>
       <li><a href="cnit-work.html">Work</a></li>
       <li><a href="cnit-homework-2.html"> Homework 2</a></li>
     </ul>
