--- a/cnit-work.html
+++ b/cnit-work.html
@@ -21,7 +21,7 @@
 
       <li><a href="index.html">Home</a></li>
       <li><a href="cnit-about.html">About</a></li>
-      <li><a href="cnit-work.html">Work</a></li>
+      <li><a class="selected" href="cnit-work.html">Work</a></li>
       <li><a href="cnit-homework-2.html">Homework 2</a></li>
     </ul>
 
