--- a/cnit-homework-2.html
+++ b/cnit-homework-2.html
@@ -22,7 +22,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="cnit-about.html">About</a></li>
       <li><a href="cnit-work.html">Work</a></li>
-      <li><a class="selected" href="cnit-homework-2.html">Homework 2</a></li>
+      <li><a href="homework-2/embedded.html">Homework 2</a></li>
     </ul>
 
     <!-- Welcome Banner -->
