Added Homework 3 page to Github pages site.

--- a/cnit-homework-4.html
+++ b/cnit-homework-4.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaRon Jamal | Home</title>
+    <title>TaRon Jamal | Homework 4</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <link rel="stylesheet" type="text/css" href="cnit.css">
+    <link rel="stylesheet" type="text/css" href="cnit-work.css">
     <link href="https://fonts.googleapis.com/css?family=Notable" rel="stylesheet">
   </head>
 
@@ -19,7 +19,7 @@
           <a href="index.html">TaRon Jamal</a>
         </div>
 
-      <li><a class ="selected" href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="cnit-about.html">About</a></li>
       <li><a href="cnit-work.html">Work</a></li>
       <li><a href="cnit-homework.html">CNIT 132</a></li>
@@ -33,17 +33,9 @@
     <!-- Two Column Layout -->
     <div class="row">
       <div class="column left">
-      <img src="mitchells.jpg" width="100%" alt=""/>
     </div>
     <div class="column right">
-      <h2>Frontend Web Developer</h2>
-        <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-css3-plain-wordmark colored"></i>
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-java-plain-wordmark colored"></i>
-        <p>Thank you for your interest in my skills and background.</p>
-        <p>Feel free to contact me if interested in a possible collaboration.</p>
-        <p>Happy Coding.</p>
+      <h2>Page Currently Under Construction.</h2>
     </div>
     </div>
 
