--- a/cnit-about.html
+++ b/cnit-about.html
@@ -20,9 +20,9 @@
         </div>
 
       <li><a href="index.html">Home</a></li>
-      <li><a class="selected" href="cnit-about.html">About</a></li>
+      <li><a class ="selected" href="cnit-about.html">About</a></li>
       <li><a href="cnit-work.html">Work</a></li>
-      <li><a href="homework-2/embedded.html"> Homework 2</a></li>
+      <li><a href="cnit-homework.html">CNIT 132</a></li>
     </ul>
 
     <!-- Welcome Banner -->
@@ -45,7 +45,7 @@
 
     <!-- Footer -->
     <div id="footer">
-      <a href="mailto:tje.hotep@gmail.com" style="font-size:24px" class="fa">&#xf003;</i></a>
+      <a href="mailto:tje.hotep@gmail.com"<i style="font-size:24px" class="fa">&#xf003;</i></a>
         <script>
           var date = document.lastModified;
           document.write("Last Modified: "+date);
