Added target tag to hyperlinks.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -34,15 +34,15 @@
     <!-- Table Navigation: Homework 1 thru Homework 9 -->
     <nav>
       <ul class="nav-table">
-        <li><a href="index.html">HW 1</a></li>
-        <li><a href="linked1.html">HW 2</a></li>
-        <li><a href="cnit-homework.html">HW 3</a></li>
-        <li><a href="cnit-homework-4.html">HW 4</a></li>
-        <li><a href="cnit-homework-5.html">HW 5</a></li>
-        <li><a href="cnit-homework-6.html">HW 6</a></li>
-        <li><a href="cnit-homework-7.html">HW 7</a></li>
-        <li><a href="cnit-homework-8.html">HW 8</a></li>
-        <li><a href="cnit-homework-9.html">HW 9</a></li>
+        <li><a href="index.html" target="blank">HW 1</a></li>
+        <li><a href="linked1.html" target="blank">HW 2</a></li>
+        <li><a href="cnit-homework.html" target="blank">HW 3</a></li>
+        <li><a href="cnit-homework-4.html" target="blank">HW 4</a></li>
+        <li><a href="cnit-homework-5.html" target="blank">HW 5</a></li>
+        <li><a href="cnit-homework-6.html" target="blank">HW 6</a></li>
+        <li><a href="cnit-homework-7.html" target="blank">HW 7</a></li>
+        <li><a href="cnit-homework-8.html" target="blank">HW 8</a></li>
+        <li><a href="cnit-homework-9.html" target="blank">HW 9</a></li>
       </ul>
     </nav>
 
