Add Homework 4 - Graphics.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -73,17 +73,17 @@
       </tr>
       <!-- Homework 3 -->
       </tr>
-        <td class="tabData-3"><p>HW 3 - Homework List</p></td>
+        <td class="cnit-homework.html"><p>HW 3 - Homework List</p></td>
         <td><p>October 18, 2018</p></td>
         <td><p></p></td>
         <td>CSS positioning - margin and border.</td>
       </tr>
       <!-- Homework 4 -->
       <tr>
-        <td><a href="cnit-homework-4.html">HW 4 - Graphics</a></td>
+        <td><a href="olympus-index.html">HW 4 - Graphics</a></td>
+        <td><p>November, 12, 2018</p></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>Adobe Photoshop - ontaining each coordinates.</td>
       </tr>
       <!-- Homework 5 -->
       <tr>
