--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -73,7 +73,7 @@
       </tr>
       <!-- Homework 3 -->
       </tr>
-        <td class="cnit-homework.html"><p>HW 3 - Homework List</p></td>
+        <td><a href="cnit-homework.html"><p>HW 3 - Homework List</p></td>
         <td><p>October 18, 2018</p></td>
         <td><p></p></td>
         <td>CSS positioning - margin and border.</td>
