Fix Homework 4 error.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -81,7 +81,7 @@
       <!-- Homework 4 -->
       <tr>
         <td><a href="olympus-index.html">HW 4 - Graphics</a></td>
-        <td><p>November, 12, 2018</p></td>
+        <td><p>November 2, 2018</p></td>
         <td></td>
         <td>Adobe Photoshop - ontaining each coordinates.</td>
       </tr>
