--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -37,7 +37,7 @@
         <li><a href="index.html">HW 1</a></li>
         <li><a href="linked1.html">HW 2</a></li>
         <li><a href="cnit-homework.html">HW 3</a></li>
-        <li><a href="cnit-homework-4.html">HW 4</a></li>
+        <li><a href="olympus-index.html">HW 4</a></li>
         <li><a href="cnit-homework-5.html">HW 5</a></li>
         <li><a href="cnit-homework-6.html">HW 6</a></li>
         <li><a href="cnit-homework-7.html">HW 7</a></li>
@@ -83,7 +83,7 @@
         <td><a href="olympus-index.html">HW 4 - Graphics</a></td>
         <td><p>November 2, 2018</p></td>
         <td></td>
-        <td>Adobe Photoshop - ontaining each coordinates.</td>
+        <td>Adobe Photoshop - obtaining each coordinates.</td>
       </tr>
       <!-- Homework 5 -->
       <tr>
