Fix final issue with Homework 4.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -34,10 +34,10 @@
     <!-- Table Navigation: Homework 1 thru Homework 9 -->
     <nav>
       <ul class="nav-table">
-        <li><a href="index.html">HW 1</a></li>
-        <li><a href="linked1.html">HW 2</a></li>
-        <li><a href="cnit-homework.html">HW 3</a></li>
-        <li><a href="olympus-index.html">HW 4</a></li>
+        <li><a href="index.html" target="_blank">HW 1</a></li>
+        <li><a href="linked1.html" target="_blank">HW 2</a></li>
+        <li><a href="cnit-homework.html" target="_blank">HW 3</a></li>
+        <li><a href="olympus-index.html" target="_blank">HW 4</a></li>
         <li><a href="cnit-homework-5.html">HW 5</a></li>
         <li><a href="cnit-homework-6.html">HW 6</a></li>
         <li><a href="cnit-homework-7.html">HW 7</a></li>
@@ -59,31 +59,31 @@
       </tr>
       <!-- Homework 1 -->
       <tr>
-        <td><a href="index.html">HW 1 - Basic Website</a></td>
+        <td><a href="index.html" target="_blank">HW 1 - Basic Website</a></td>
         <td><p>September 7, 2018</p></td>
         <td><p>October 3, 2018</p></td>
         <td>Uploading to CCSF Hills server.</td>
       </tr>
       <!-- Homework 2 -->
       <tr>
-        <td><a href="linked1.html">HW 2 - Style Sheets I</a></td>
+        <td><a href="linked1.html" target="_blank">HW 2 - Style Sheets I</a></td>
         <td><p>September 30, 2018</p></td>
         <td><p>October 3, 2018</p></td>
         <td>CSS positioning - float and cascade.</td>
       </tr>
       <!-- Homework 3 -->
       </tr>
-        <td><a href="cnit-homework.html"><p>HW 3 - Homework List</p></td>
+        <td><a href="cnit-homework.html" target="_blank"><p>HW 3 - Homework List</p></td>
         <td><p>October 18, 2018</p></td>
         <td><p></p></td>
         <td>CSS positioning - margin and border.</td>
       </tr>
       <!-- Homework 4 -->
       <tr>
-        <td><a href="olympus-index.html">HW 4 - Graphics</a></td>
+        <td><a href="olympus-index.html" target="_blank">HW 4 - Graphics</a></td>
         <td><p>November 2, 2018</p></td>
         <td></td>
-        <td>Adobe Photoshop - obtaining each coordinates.</td>
+        <td>Adobe Photoshop - obtaining coordinates for imagemap.</td>
       </tr>
       <!-- Homework 5 -->
       <tr>
