--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -88,7 +88,7 @@
       <!-- Homework 5 -->
       <tr>
         <td><a href="cnit-homework-5.html">HW 5 - Multimedia</a></td>
-        <td></td>
+        <td><p>November 12, 2018</p></td>
         <td></td>
         <td></td>
       </tr>
