--- a/olympus-large.html
+++ b/olympus-large.html
@@ -24,6 +24,20 @@
     </div>
 
 
+    <!-- HTML and CSS Validator -->
+    <div class="validate">
+      <a href="https://validator.w3.org/nu/?doc=https://fog.ccsf.edu/~srubin/embedded.html">
+        <img style="border:0;width:88px;height:31px" src="HTML5.png"
+        alt="HTML5"></a>
+
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss"
+        alt="Valid CSS!">
+      </a>
+    </div>
+    
+
     <!-- Footer -->
     <footer>&copy 2018 Olympus Mons Society. All Rights Reserved.</footer>
 
