--- a/threeMountains.html
+++ b/threeMountains.html
@@ -18,13 +18,27 @@
     <!-- Main Content -->
     <div class="content">
 
-        <img class="thumb2" src="olympus-large.png" width="" height="" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
+        <img class="thumb2" src="olympus-everest.jpg" width="100" height="100" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
         <map name="olympus3">
           <area shape="rect" coords="248,6,400,25" href="https://bit.ly/2dPSO6P" alt="Mons" target="_blank">
           <area shape="rect" coords="84,132,237,110" href="https://bit.ly/2GgiYfW" alt="Everest" target="_blank">
           <area shape="rect" coords="432,157,541,133" href="https://bit.ly/2OOQai0" alt="Kea" target="_blank">
         </map>
 
+    </div>
+
+
+    <!-- HTML and CSS Validator -->
+    <div class="validate">
+      <a href="https://validator.w3.org/nu/?doc=https://fog.ccsf.edu/~srubin/embedded.html">
+        <img style="border:0;width:88px;height:31px" src="HTML5.png"
+        alt="HTML5"></a>
+
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss"
+        alt="Valid CSS!">
+      </a>
     </div>
 
 
