--- a/threeMountains.html
+++ b/threeMountains.html
@@ -18,7 +18,7 @@
     <!-- Main Content -->
     <div class="content">
 
-        <img class="thumb2" src="olympus-everest.jpg" width="100" height="100" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
+        <img class="thumb2" src="olympus-large.png" width="100" height="100" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
         <map name="olympus3">
           <area shape="rect" coords="248,6,400,25" href="https://bit.ly/2dPSO6P" alt="Mons" target="_blank">
           <area shape="rect" coords="84,132,237,110" href="https://bit.ly/2GgiYfW" alt="Everest" target="_blank">
