Edit - gamma, thumb, imagemap.

--- a/threeMountains.html
+++ b/threeMountains.html
@@ -18,11 +18,11 @@
     <!-- Main Content -->
     <div class="content">
 
-        <img class="thumb2" src="olympus-large.png" width="100" height="100" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
+        <img class="thumb2" src="olympus-large.png" width="650" height="217" alt="Infograph of Olympus Mons, Mount Everest, and Mauna Kea." usemap="#olympus3">
         <map name="olympus3">
-          <area shape="rect" coords="248,6,400,25" href="https://bit.ly/2dPSO6P" alt="Mons" target="_blank">
-          <area shape="rect" coords="84,132,237,110" href="https://bit.ly/2GgiYfW" alt="Everest" target="_blank">
-          <area shape="rect" coords="432,157,541,133" href="https://bit.ly/2OOQai0" alt="Kea" target="_blank">
+          <area shape="rect" coords="254,1,390,27" href="https://bit.ly/2dPSO6P" alt="Mons" target="_blank">
+          <area shape="poly" coords="256,127,117,98,97,126" href="https://bit.ly/2GgiYfW" alt="Everest" target="_blank">
+          <area shape="circle" coords="485,151,46" href="https://bit.ly/2OOQai0" alt="Kea" target="_blank">
         </map>
 
     </div>
