--- a/olympus-index.html
+++ b/olympus-index.html
@@ -20,7 +20,7 @@
       <p><a href="olympus-large.html" target="_blank"><img class="thumb1" src="olympus-tn.jpg" alt="Aerial view of Olympus Mons." title="Click for large image."></a>Olympus Mons is the largest volcano on Mars, standing at over 33,476 feet. The summit alone is 53 miles wide and its surrounding edges reach as high as six miles. The volcano is located in Mars' western hemipshere at the edge of the Tharsis bulge and is the tallest known planetary mountain in the Solar System.</p>
       <p>Just to put into perspective how massive Olympus Mons is - think of this behemoth as being
         <a href="threeMountains.html" target="_blank">
-        <img class="thumb2" src="olympus-tn.png" alt="Aerial view of Olympus Mons." title="Click for imagemap.">
+        <img class="thumb2" src="olympus_tn.png" alt="Aerial view of Olympus Mons." title="Click for imagemap.">
         </a>
       roughly the size of Arizona - but three times bigger than Earth's largest mountain Mt. Everest. The <strong>cliff</strong> alone has been reported to be as tall as Mauna Kea.</p>
     </div>
