--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -36,7 +36,7 @@
       <ul class="nav-table">
         <li><a href="index.html" target="_blank">HW 1</a></li>
         <li><a href="linked1.html" target="_blank">HW 2</a></li>
-        <li><a href="cnit-homework.html" target="_blank">HW 3</a></li>
+        <li>HW 3</a></li>
         <li><a href="olympus-index.html" target="_blank">HW 4</a></li>
         <li><a href="cnit-homework-5.html">HW 5</a></li>
         <li><a href="cnit-homework-6.html">HW 6</a></li>
@@ -121,6 +121,20 @@
         <td></td>
       </tr>
     </table>
+
+
+    <!-- HTML and CSS Validator -->
+    <div class="validate">
+      <a href="https://validator.w3.org/nu/?doc=https://fog.ccsf.edu/~srubin/embedded.html">
+        <img style="border:0;width:88px;height:31px" src="HTML5.png"
+        alt="HTML5"></a>
+
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss"
+        alt="Valid CSS!">
+      </a>
+    </div>
 
 
     <!-- Footer -->
