Date Approved edit for HW3 + HW4

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -75,14 +75,14 @@
       </tr>
         <td><a href="cnit-homework.html" target="_blank"><p>HW 3 - Homework List</p></td>
         <td><p>October 18, 2018</p></td>
-        <td><p></p></td>
+        <td><p>November 30, 2018</p></td>
         <td>CSS positioning - margin and border.</td>
       </tr>
       <!-- Homework 4 -->
       <tr>
         <td><a href="olympus-index.html" target="_blank">HW 4 - Graphics</a></td>
         <td><p>November 2, 2018</p></td>
-        <td></td>
+        <td>November 19, 2018</td>
         <td>Adobe Photoshop - obtaining coordinates for imagemap.</td>
       </tr>
       <!-- Homework 5 -->
