Added Homework 5 to Github Pages site.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -37,7 +37,7 @@
         <li><a href="linked1.html" target="_blank">HW 2</a></li>
         <li>HW 3</a></li>
         <li><a href="olympus-index.html" target="_blank">HW 4</a></li>
-        <li><a href="cnit-homework-5.html">HW 5</a></li>
+        <li><a href="conquering-media.html" target="_blank">HW 5</a></li>
         <li><a href="cnit-homework-6.html">HW 6</a></li>
         <li><a href="cnit-homework-7.html">HW 7</a></li>
         <li><a href="cnit-homework-8.html">HW 8</a></li>
@@ -86,10 +86,10 @@
       </tr>
       <!-- Homework 5 -->
       <tr>
-        <td><a href="cnit-homework-5.html">HW 5 - Multimedia</a></td>
+        <td><a href="conquering-media.html" target="_blank">HW 5 - Multimedia</a></td>
         <td><p>November 12, 2018</p></td>
         <td></td>
-        <td></td>
+        <td>Displaying embedded video and iFrame slideshow.</td>
       </tr>
       <!-- Homework 6 -->
       <tr>
