Edit tables page.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -41,7 +41,6 @@
         <li><a href="cnit-homework-6.html">HW 6</a></li>
         <li><a href="cnit-homework-7.html">HW 7</a></li>
         <li><a href="cnit-homework-8.html">HW 8</a></li>
-        <li><a href="cnit-homework-9.html">HW 9</a></li>
       </ul>
     </nav>
 
@@ -58,21 +57,21 @@
       </tr>
       <!-- Homework 1 -->
       <tr>
-        <td><a href="index.html" target="_blank">HW 1 - Basic Website</a></td>
+        <td><a href="index.html" target="_blank">HW 1 - Basics of HTML</a></td>
         <td><p>September 7, 2018</p></td>
         <td><p>October 3, 2018</p></td>
         <td>Uploading to CCSF Hills server.</td>
       </tr>
       <!-- Homework 2 -->
       <tr>
-        <td><a href="linked1.html" target="_blank">HW 2 - Style Sheets I</a></td>
+        <td><a href="linked1.html" target="_blank">HW 2 - CSS I</a></td>
         <td><p>September 30, 2018</p></td>
         <td><p>October 3, 2018</p></td>
         <td>CSS positioning - float and cascade.</td>
       </tr>
       <!-- Homework 3 -->
       </tr>
-        <td><a href="cnit-homework.html" target="_blank"><p>HW 3 - Homework List</p></td>
+        <td><a href="cnit-homework.html" target="_blank"><p>HW 3 - Tables</p></td>
         <td><p>October 18, 2018</p></td>
         <td><p>November 30, 2018</p></td>
         <td>CSS positioning - margin and border.</td>
@@ -93,29 +92,22 @@
       </tr>
       <!-- Homework 6 -->
       <tr>
-        <td><a href="cnit-homework-6.html">HW 6 - Style Sheets II</a></td>
-        <td></td>
+        <td><a href="cnit-homework-6.html">HW 6 - CSS II</a></td>
+        <td><p>November 30, 2018</p></td>
         <td></td>
         <td></td>
       </tr>
       <!-- Homework 7 -->
       <tr>
         <td><a href="cnit-homework-7.html">HW 7 - Forms</a></td>
-        <td></td>
+        <td><p>December 7, 2018</p></td>
         <td></td>
         <td></td>
       </tr>
       <!-- Homework 8 -->
       <tr>
-        <td><a href="cnit-homework-8.html">HW 8 - AJAX</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <!-- Homework 9 -->
-      <tr>
-        <td><a href="cnit-homework-9.html">HW 9 - JavaScript</a></td>
-        <td></td>
+        <td><a href="cnit-homework-8.html">HW 8 - JavaScript</a></td>
+        <td><p>December 20, 2018</p></td>
         <td></td>
         <td></td>
       </tr>
