Edit Homework page.

--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -87,21 +87,21 @@
       <tr>
         <td><a href="conquering-media.html" target="_blank">HW 5 - Multimedia</a></td>
         <td><p>November 12, 2018</p></td>
-        <td></td>
+        <td>December 20, 2018</td>
         <td>Displaying embedded video and iFrame slideshow.</td>
       </tr>
       <!-- Homework 6 -->
       <tr>
         <td><a href="cnit-homework-6.html">HW 6 - CSS II</a></td>
         <td><p>November 30, 2018</p></td>
-        <td></td>
-        <td></td>
+        <td>December 20, 2018</td>
+        <td>CSS positioning and z-index.</td>
       </tr>
       <!-- Homework 7 -->
       <tr>
         <td><a href="cnit-homework-7.html">HW 7 - Forms</a></td>
         <td><p>December 7, 2018</p></td>
-        <td></td>
+        <td>December 20, 2018</td>
         <td></td>
       </tr>
       <!-- Homework 8 -->
