--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -38,7 +38,7 @@
         <li>HW 3</a></li>
         <li><a href="olympus-index.html" target="_blank">HW 4</a></li>
         <li><a href="conquering-media.html" target="_blank">HW 5</a></li>
-        <li><a href="cnit-homework-6.html">HW 6</a></li>
+        <li><a href="ramanujan.html" target="_blank">HW 6</a></li>
         <li><a href="cnit-homework-7.html">HW 7</a></li>
         <li><a href="cnit-homework-8.html">HW 8</a></li>
       </ul>
@@ -92,7 +92,7 @@
       </tr>
       <!-- Homework 6 -->
       <tr>
-        <td><a href="cnit-homework-6.html">HW 6 - CSS II</a></td>
+        <td><a href="ramanujan.html" target="_blank">HW 6 - CSS II</a></td>
         <td><p>November 30, 2018</p></td>
         <td>December 20, 2018</td>
         <td>CSS positioning and z-index.</td>
