Edit - absolute positioning, z-index, and CSS validation.

--- a/ramanujan.html
+++ b/ramanujan.html
@@ -12,7 +12,7 @@
 
     <!-- Banner -->
     <div class="">
-      <img src="rsz_math-background.jpg" alt="Mathematical symbols">
+      <img src="rsz_math-banner.jpg" alt="Mathematical symbols">
     </div>
 
 
