--- a/cnit-homework.html
+++ b/cnit-homework.html
@@ -39,7 +39,7 @@
         <li><a href="olympus-index.html" target="_blank">HW 4</a></li>
         <li><a href="conquering-media.html" target="_blank">HW 5</a></li>
         <li><a href="ramanujan.html" target="_blank">HW 6</a></li>
-        <li><a href="cnit-homework-7.html">HW 7</a></li>
+        <li><a href="poly.html" target="_blank">HW 7</a></li>
         <li><a href="cnit-homework-8.html">HW 8</a></li>
       </ul>
     </nav>
@@ -99,10 +99,10 @@
       </tr>
       <!-- Homework 7 -->
       <tr>
-        <td><a href="cnit-homework-7.html">HW 7 - Forms</a></td>
+        <td><a href="poly.html" target="_blank">HW 7 - Forms</a></td>
         <td><p>December 7, 2018</p></td>
         <td>December 20, 2018</td>
-        <td></td>
+        <td>Input radio button and CSS positioning.</td>
       </tr>
       <!-- Homework 8 -->
       <tr>
